--- a/_includes/sitelayout.njk
+++ b/_includes/sitelayout.njk
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal website for Boris Terzic with blog posts on programming and technology.">
     {% if norobots %}
     <meta name="robots" content="noindex">
     {% endif %}
