Fixing the title of the blog and reverting test commit

--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: sitelayout.njk
-title: All Posts on Brennschluss
+title: All Posts on Apparat
 ---
 
 <div class="cover">
@@ -21,5 +21,3 @@ title: All Posts on Brennschluss
   {%- endfor -%}
   </ol>
 </div>
-
-So it goes.
