--- a/pages/impressum.njk
+++ b/pages/impressum.njk
@@ -6,16 +6,13 @@ norobots: true
 
 <h1>{{ title }}</h1>
 <p>
-Owner of this website is Boris Terzic.
+Owner of this website is Boris Terzic:
 </p>
-<p>
-Address:
 <address>
 Durmersheimer Straße 36<br>
 76185 Karlsruhe<br>
 Germany<br>
 </address>
-</p>
 <p>
 Email: boris@terzic.be<br>
 Tel.: country code 49, number 0151 582 13 113
