Reducing impressum to a simple about page with twitter link

--- a/_includes/sitelayout.njk
+++ b/_includes/sitelayout.njk
@@ -234,7 +234,7 @@ p code {
         <ol>
           <li><a href="/">Home</a></li>
           <li><a href="/pages/blog-styleguide/">Styleguide</a></li>
-          <li><a href="/pages/impressum/">Impressum</a></li>
+          <li><a href="/pages/impressum/">About</a></li>
         </ol>
       </nav>
     </header>
