--- a/pages/impressum.njk
+++ b/pages/impressum.njk
@@ -6,14 +6,5 @@ norobots: true
 
 <h1>{{ title }}</h1>
 <p>
-Owner of this website is Boris Terzic:
-</p>
-<address>
-Durmersheimer Straße 36<br>
-76185 Karlsruhe<br>
-Germany<br>
-</address>
-<p>
-Email: boris@terzic.be<br>
-Tel.: country code 49, number 0151 582 13 113
+Owner of this website is <a href="https://twitter.com/boristerzic">Boris Terzic</a>.
 </p>
