--- a/index.njk
+++ b/index.njk
@@ -3,16 +3,16 @@ layout: sitelayout.njk
 title: All Posts on Apparat
 ---
 
-<div class="cover">
+<section class="cover">
   <h1>Apparat.</h1>
   a<br>
   <h2>BLOG</h2>
   by<br>
   <h3>Boris Terzic</h3>
-</div>
+</section>
 
-<div class="postlist">
-  <h2>All Posts</h2>
+<section class="postlist">
+  <h1>All Posts</h1>
   <ol class="postlist">
   {# Each tag is exposed as its own collection you can iterate over #}
   {%- for post in collections.post | reverse -%}
@@ -20,4 +20,4 @@ title: All Posts on Apparat
     <li><time datetime="{{ post.data.date | isodate }}">{{ post.data.date | isodate }}</time><a href="{{ post.url }}">{{ post.data.title }}</a></li>
   {%- endfor -%}
   </ol>
-</div>
+</section>
