Adding configuration for static file passthrough hosting and moved the fonts to the correct directory

--- a/_includes/sitelayout.njk
+++ b/_includes/sitelayout.njk
@@ -17,7 +17,7 @@
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/eb-garamond-v25-latin-regular.woff2') format('woff2');
+       url('fonts/eb-garamond-v25-latin-regular.woff2') format('woff2');
 }
 
 /* open-sans-regular - latin */
@@ -26,7 +26,7 @@
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/open-sans-v29-latin-regular.woff2') format('woff2');
+       url('fonts/open-sans-v29-latin-regular.woff2') format('woff2');
 }
 
 /* roboto-slab-regular - latin */
@@ -35,7 +35,7 @@
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/roboto-slab-v23-latin-regular.woff2') format('woff2');
+       url('fonts/roboto-slab-v23-latin-regular.woff2') format('woff2');
 }
 
 /* From monica.css */
