Adding font-face swap to prevent FOIC

--- a/_includes/sitelayout.njk
+++ b/_includes/sitelayout.njk
@@ -18,6 +18,7 @@
   font-weight: 400;
   src: local(''),
        url('/fonts/eb-garamond-v25-latin-regular.woff2') format('woff2');
+  font-display: swap;
 }
 
 /* roboto-slab-regular - latin */
@@ -27,6 +28,7 @@
   font-weight: 400;
   src: local(''),
        url('/fonts/roboto-slab-v23-latin-regular.woff2') format('woff2');
+  font-display: swap;
 }
 
 /* From monica.css */
