Changed Twitter bio link to a mastodon link

--- a/pages/impressum.njk
+++ b/pages/impressum.njk
@@ -6,5 +6,5 @@ norobots: true
 
 <h1>{{ title }}</h1>
 <p>
-Owner of this website is <a href="https://twitter.com/boristerzic">Boris Terzic</a>.
+Owner of this website is Boris Terzic. <a href="https://c.im/@bterzic">Follow me on Mastodon</a>.
 </p>
