Adjusted blog style, reduced font weight added styles for images

--- a/index.njk
+++ b/index.njk
@@ -4,7 +4,7 @@ title: All Posts on Apparat
 ---
 
 <section class="cover">
-  <h1>Apparat.</h1>
+  <h1>(Apparat)</h1>
   a<br>
   <h2>BLOG</h2>
   by<br>
