Tweaking line height for bullet lists

--- a/_includes/sitelayout.njk
+++ b/_includes/sitelayout.njk
@@ -232,6 +232,10 @@ li {
   line-height: calc(1ex / 0.32);
 }
 
+article li {
+  line-height: calc(1ex / 0.28);
+}
+
 span.postdate {
   display: block;
   text-align: left;
