CSS is now processed with lightning CSS and is linked as a separate stylesheet

--- a/_input/_includes/sitelayout.njk
+++ b/_input/_includes/sitelayout.njk
@@ -8,9 +8,7 @@
     <meta name="robots" content="noindex">
     {% endif %}
     <title>{{title}}</title>    
-    <style>
-      {% include "all.css" %}
-    </style>
+    <link rel="stylesheet" href="/css/all.css">
   </head>
   <body>
     <header>
