--- a/_input/css/all.css
+++ b/_input/css/all.css
@@ -92,7 +92,7 @@ textarea:not([rows]) {
 /********** end reset **********/
 
 
-html {
+:root {
   --spacing-xs: 8px;
   --spacing-s: 12px;
   --spacing: 24px;
@@ -118,28 +118,32 @@ body {
   font-size: 18px;
   font-family: 'Roboto Slab', serif;
 }
+
 ::selection {
   background: var(--olympic-blue);
   color: white;
 }
-pre, code {
-  font-family: monospace;
-  font-size: 16px;
-  border-radius: 3px;
-}
+
 header, footer {
   margin: auto;
   display: flex;
   justify-content: center;
 }
+
+footer {
+  font-size: 21px;
+  margin-bottom: var(--spacing);
+}
+
 main {
   max-width: 75ch;
   margin: auto;
   padding: 0 var(--spacing) var(--spacing) var(--spacing);
-}
-footer {
-  font-size: 21px;
-  margin-bottom: var(--spacing);
+
+  ol, ul {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 
@@ -151,27 +155,32 @@ nav {
   border-radius: 3px;
   border: 1px #333333 solid;
   box-shadow: 2px 2px 3px 0 #bbbbbb;
-}
-nav ol {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-}
-nav ol li {
-  margin: var(--spacing-s);
-}
-nav ol li {
-  list-style-type: none;
-}
-nav a, nav a:visited {
-  color: black;
-  text-decoration: none;
-}
-nav a:hover {
-  border-bottom: 1px dotted black;
-  padding-bottom: 2px;
+  
+  ol {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    
+    li {
+      margin: var(--spacing-s);
+    }
+
+    li {
+      list-style-type: none;
+    }
+  }
+
+  a, a:visited {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:hover {
+    border-bottom: 1px dotted black;
+    padding-bottom: 2px;
+  }  
 }
 
 
@@ -180,11 +189,6 @@ a {
 }
 a:visited {
   color: var(--visited-link-color);
-}
-
-
-img {
-  width: 100%;
 }
 
 
@@ -214,44 +218,22 @@ h4 {
 }
 
 
-main ol, main ul {
-  margin: 0;
-  padding: 0;
-}
-
-
 .cover {
   text-align: center;
   line-height: 400%;
   border: 1px solid black;
   margin-bottom: var(--spacing);
-}
-.cover h1 {
-  border: none;
-  word-wrap: break-all;
-}
-.cover h1, .cover h2 {
-  letter-spacing: 12px;
+  
+  h1 {
+    border: none;
+    word-wrap: break-all;
+  }
+
+  h1, h2 {
+    letter-spacing: 12px;
+  }  
 }
 
-
-article p {
-  line-height: calc(1ex / 0.32);
-  font-size: 1em;
-}
-
-article ul,
-article ol {
-  line-height: calc(1ex / 0.28);
-  font-size: 1em;
-}
-
-article p,
-article pre,
-article ul,
-article ol {
-  margin: calc(1ex / 0.32) 0 0 0;
-}
 
 article p:first-of-type,
 h1 + p,
@@ -264,6 +246,25 @@ p + ul {
 
 
 article {
+  p, pre, ul, ol {
+    margin: calc(1ex / 0.32) 0 0 0;
+  }
+
+  p {
+    line-height: calc(1ex / 0.32);
+    font-size: 1em;
+
+    code {
+      background-color: var(--color-code-bg);
+      padding: 0 4px;
+    }
+  }
+  
+  ul, ol {
+    line-height: calc(1ex / 0.28);
+    font-size: 1em;
+  }
+
   .postdate {
     display: block;
     text-align: left;
@@ -276,6 +277,12 @@ article {
     font-size: 12px;
   }
 
+  pre, code {
+    font-family: monospace;
+    font-size: 16px;
+    border-radius: 3px;
+  }
+  
   pre {
     padding: var(--spacing-s);
     background-color: var(--color-code-bg);
@@ -283,36 +290,45 @@ article {
     overflow-y: hidden;
   }
 
-  p code {
-    background-color: var(--color-code-bg);
-    padding: 0 4px;
+  img {
+    width: 100%;
+  }  
+}
+
+
+ol.postlist {
+  time {
+    display: block;
+    font-family: monospace;
+    font-size: 12px;
+    line-height: 1;
   }
-}
 
-
-ol.postlist time {
-  display: block;
-  font-family: monospace;
-  font-size: 12px;
-  line-height: 1;
-}
-ol.postlist li {
-  margin-bottom: var(--spacing-s);
-  list-style-type: none;
+  li {
+    margin-bottom: var(--spacing-s);
+    list-style-type: none;
+  }  
 }
 
 
 @media only screen and (min-width: 1000px)  {
-  .postlist time {
-    display: inline-block;
-    text-align: right;
-    width: 19ch;
-    margin: 0 0 0 -19ch;
-    padding-right: 1ch;
-  }
+  .postlist {
 
+    li {
+      display: flex;
+      align-items: center;  
+    }
 
-  .postlist time:after {
-    content: ' ·';
-  }
+    time {
+      display: inline-block;
+      text-align: right;
+      width: 19ch;
+      margin: 0 0 0 -19ch;
+      padding-right: 1ch;
+
+      &:after {
+        content: ' ·';
+      }  
+    }
+  }  
 }
