--- a/_input/_includes/sitelayout.njk
+++ b/_input/_includes/sitelayout.njk
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal website for Boris Terzic with blog posts on programming and technology.">
+    <meta name="author" content="{{ site.authorName }}">
+    <meta name="description" content="{{ site.description }}">
     {% if norobots %}
     <meta name="robots" content="noindex">
     {% endif %}
