New design with a bauhaus inspired logo and moving to system fonts instead of downloadable fonts

--- a/_input/_includes/sitelayout.njk
+++ b/_input/_includes/sitelayout.njk
@@ -28,7 +28,7 @@
     {{ css | lightningcss | safe }}
   </style>
   </head>
-  <body>
+  <body class="{% if page.fileSlug %}page-other{% else %}index{% endif %}">
     <header>
       <nav>
         <ol>
