--- a/_input/index.njk
+++ b/_input/index.njk
@@ -3,21 +3,19 @@ layout: sitelayout.njk
 title: All Posts on Apparat
 ---
 
-<section class="cover">
-  <h1>(Apparat)</h1>
-  a<br>
-  <h2>BLOG</h2>
-  by<br>
-  <h3>Boris Terzic</h3>
-</section>
+<div class="index-container">
+  <section class="logo-section">
+    <img src="images/bauhaus-logo.png" alt="Bauhaus Logo" />
+  </section>
 
-<section class="postlist">
-  <h1>All Posts</h1>
-  <ol class="postlist">
-  {# Each tag is exposed as its own collection you can iterate over #}
-  {%- for post in collections.post | reverse -%}
-    {# isodate is a custom filter defined in .eleventy.js #}
-    <li><time datetime="{{ post.data.date | isodate }}">{{ post.data.date | isodate }}</time><a href="{{ post.url }}">{{ post.data.title }}</a></li>
-  {%- endfor -%}
-  </ol>
-</section>
+  <section class="postlist">
+    <h1>All Posts</h1>
+    <ol class="postlist">
+    {# Each tag is exposed as its own collection you can iterate over #}
+    {%- for post in collections.post | reverse -%}
+      {# isodate is a custom filter defined in .eleventy.js #}
+      <li><time datetime="{{ post.data.date | isodate }}">{{ post.data.date | isodate }}</time><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+    {%- endfor -%}
+    </ol>
+  </section>
+</div>
