Upgrade eleventy and finally make CSS changes work

--- a/_input/_includes/sitelayout.njk
+++ b/_input/_includes/sitelayout.njk
@@ -25,7 +25,7 @@
       {% include "_input/css/all.css" %}
     {% endset %}
   <style>
-    {{ css | lightningcss | safe }}
+    {{ css | safe }}
   </style>
   </head>
   <body class="{% if page.fileSlug %}page-other{% else %}index{% endif %}">
