--- a/_input/index.njk
+++ b/_input/index.njk
@@ -5,7 +5,7 @@ title: All Posts on Apparat
 
 <div class="index-container">
   <section class="logo-section">
-    <img src="images/bauhaus-logo.png" alt="Bauhaus Logo" />
+    <img src="images/bauhaus-logo.webp" alt="Bauhaus Logo" />
   </section>
 
   <section class="postlist">
