--- a/_input/index.njk
+++ b/_input/index.njk
@@ -1,6 +1,7 @@
 ---
 layout: sitelayout.njk
 title: All Posts on Apparat
+description: Personal website for Boris Terzic
 ---
 
 <div class="index-container">
